update translations for AI summary

--- a/translations/ai_summary+intl-icu.es.yml
+++ b/translations/ai_summary+intl-icu.es.yml
@@ -1,17 +1,17 @@
 ai_summary:
     feedback:
-        prompt: "¿Te resultó útil?"
-        success: "¡Gracias por tu opinión!"
-        error: "Ocurrió un error al enviar tu opinión."
-        error_token: "Token de seguridad inválido."
+        prompt: '¿Qué te pareció?'
+        success: '¡Gracias por tu opinión!'
+        error: 'Ocurrió un error al enviar tu opinión.'
+        error_token: 'Token de seguridad inválido.'
         button:
-            helpful: "Marcar como útil"
-            not_helpful: "Marcar como no útil"
-            voted_helpful: "Votaste esto como útil"
-            voted_not_helpful: "Votaste esto como no útil"
+            helpful: 'Marcar como útil'
+            not_helpful: 'Marcar como no útil'
+            voted_helpful: 'Votaste esto como útil'
+            voted_not_helpful: 'Votaste esto como no útil'
     info:
-        based_on: "Resumen generado por IA basado en {count, plural, =1 {1 reseña} other {# reseñas}}"
+        based_on: 'Resumen generado por IA basado en {count, plural, =1 {1 reseña} other {# reseñas}}'
     panel:
-        title: "Reseña del Capitán"
-        highlights: "Aspectos destacados"
-        concerns: "Aspectos a considerar"
+        title: 'Reseña del Captain'
+        highlights: 'Aspectos destacados'
+        concerns: 'Aspectos a considerar'
