--- a/translations/validators+intl-icu.de.yml
+++ b/translations/validators+intl-icu.de.yml
@@ -1,1 +1,1 @@
-top_coaster.duplicate: "{coaster} erscheint mehrmals. Entferne bitte die Duplikate."
+top_coaster.duplicate: '{coaster} erscheint mehrmals. Entferne bitte die Duplikate.'
