--- a/translations/validators+intl-icu.es.yml
+++ b/translations/validators+intl-icu.es.yml
@@ -1,1 +1,1 @@
-top_coaster.duplicate: "{coaster} aparece varias veces. Por favor, borráis los duplicados."
+top_coaster.duplicate: '{coaster} aparece varias veces. Por favor, borráis los duplicados.'
