--- a/translations/validators+intl-icu.fr.yml
+++ b/translations/validators+intl-icu.fr.yml
@@ -1,1 +1,1 @@
-top_coaster.duplicate: "{coaster} est présent plusieurs fois. Merci de supprimer les doublons."
+top_coaster.duplicate: '{coaster} est présent plusieurs fois. Merci de supprimer les doublons.'
