--- a/translations/policy+intl-icu.fr.yml
+++ b/translations/policy+intl-icu.fr.yml
@@ -1,38 +1,42 @@
 title: 'Termes & Conditions'
 privacy:
     title: 'Politique de Confidentialité'
-    text: '<p>Cette politique de confidentialité explique comment notre site web utilise les données personnelles que nous collectons lorsque vous utilisez Captain Coaster.</p>
-           <p>Captain Coaster collecte les données suivantes lors de votre inscription :</p>
-           <ul>
-               <li>Prénom et nom,</li>
-               <li>Adresse e-mail,</li>
-               <li>Photo de profil public (uniquement lors de l''authentification Google)</li>
-              </ul>
-              <p>Nous conserverons vos données aussi longtemps que vous utiliserez notre service, dans un stockage sécurisé et en respectant la loi française "Loi Informatique et Libertés du 6 janvier 1978".</p>
-              <p>Elles ne sont jamais partagées avec quiconque et sont utilisées uniquement pour créer un compte et pour certaines fonctionnalités de Captain Coaster.</p>
-              <p>Chaque utilisateur a droit aux éléments suivants :</p>
-              <ul>
-              <li>Le droit d''accès - Vous avez le droit de nous demander des copies de vos données personnelles, envoyées par e-mail,</li>
-              <li>Le droit de rectification - Vous avez le droit de demander la correction de toute information que vous estimez inexacte ou manquante,</li>
-              <li>Le droit à l''effacement - Vous avez le droit de demander que nous effacions vos données personnelles.</li>
-              </ul>
-              <p>Si vous avez des questions sur la politique de confidentialité de Captain Coaster, sur les données que nous détenons à votre sujet, ou si vous souhaitez exercer l''un de vos droits de protection des données, veuillez <a href="{link_href}">nous contacter</a>.</p>'
+    text:
+        '<p>Cette politique de confidentialité explique comment notre site web utilise les données personnelles que nous collectons lorsque vous utilisez Captain Coaster.</p>
+        <p>Captain Coaster collecte les données suivantes lors de votre inscription :</p>
+        <ul>
+        <li>Prénom et nom,</li>
+        <li>Adresse e-mail,</li>
+        <li>Photo de profil public (uniquement lors de l''authentification Google)</li>
+        </ul>
+        <p>Nous conserverons vos données aussi longtemps que vous utiliserez notre service, dans un stockage sécurisé et en respectant la loi française "Loi Informatique et Libertés du 6 janvier 1978".</p>
+        <p>Elles ne sont jamais partagées avec quiconque et sont utilisées uniquement pour créer un compte et pour certaines fonctionnalités de Captain Coaster.</p>
+        <p>Chaque utilisateur a droit aux éléments suivants :</p>
+        <ul>
+        <li>Le droit d''accès - Vous avez le droit de nous demander des copies de vos données personnelles, envoyées par e-mail,</li>
+        <li>Le droit de rectification - Vous avez le droit de demander la correction de toute information que vous estimez inexacte ou manquante,</li>
+        <li>Le droit à l''effacement - Vous avez le droit de demander que nous effacions vos données personnelles.</li>
+        </ul>
+        <p>Si vous avez des questions sur la politique de confidentialité de Captain Coaster, sur les données que nous détenons à votre sujet, ou si vous souhaitez exercer l''un de vos droits de protection des données, veuillez <a href="{link_href}">nous contacter</a>.</p>'
 cookies:
     title: 'Politique de Cookies'
-    text: '<p>Les cookies sont de petits fichiers stockés sur l''ordinateur d''un utilisateur pour simplifier votre vie.</p>
-              <p>Captain Coaster utilise un cookie de session pour vous rappeler lorsque vous vous connectez. Cela évite de vous connecter à chaque fois que vous nous rendez visite. Nous utilisons également un cookie Google Analytics pour les statistiques.</p>'
+    text:
+        "<p>Les cookies sont de petits fichiers stockés sur l'ordinateur d'un utilisateur pour simplifier votre vie.</p>
+        <p>Captain Coaster utilise un cookie de session pour vous rappeler lorsque vous vous connectez. Cela évite de vous connecter à chaque fois que vous nous rendez visite. Nous utilisons également un cookie Google Analytics pour les statistiques.</p>"
 terms:
     title: 'Utilisation de Captain Coaster'
-    text: '<p>Captain Coaster est un site web communautaire pour les passionnés de parcs d''attractions et de montagnes russes. Il n''est affilié à aucun parc, constructeur ou société de l''industrie du loisir.</p>
-              <p>Il est ouvert à tous : il vous suffit de vous connecter pour partager votre expérience sur les montagnes russes (notes, tags, avis). Pour accéder à ces fonctionnalités, vous aurez besoin d''un compte Google ou d''une adresse e-mail <b>valide</b>. <b>Il est formellement interdit d''avoir plusieurs comptes</b> et cela entraînera une exclusion permanente.</p>
-              <p>Tous les champs participatifs sont examinés par les modérateurs de l''équipe qui se réservent le droit de modifier ou de supprimer tout message. Les utilisateurs ne respectant pas ces règles peuvent être exclus temporairement ou définitivement.</p>'
+    text:
+        "<p>Captain Coaster est un site web communautaire pour les passionnés de parcs d'attractions et de montagnes russes. Il n'est affilié à aucun parc, constructeur ou société de l'industrie du loisir.</p>
+        <p>Il est ouvert à tous : il vous suffit de vous connecter pour partager votre expérience sur les montagnes russes (notes, tags, avis). Pour accéder à ces fonctionnalités, vous aurez besoin d'un compte Google ou d'une adresse e-mail <b>valide</b>. <b>Il est formellement interdit d'avoir plusieurs comptes</b> et cela entraînera une exclusion permanente.</p>
+        <p>Tous les champs participatifs sont examinés par les modérateurs de l'équipe qui se réservent le droit de modifier ou de supprimer tout message. Les utilisateurs ne respectant pas ces règles peuvent être exclus temporairement ou définitivement.</p>"
 hosting:
     title: 'Hébergement'
     text: 'Captain Coaster est hébergé par Amazon Web Services, dont le siège est à Seattle, Washington, aux États-Unis. Nos serveurs sont situés à Paris, en France.'
 copyright:
-    title: 'Droits d''Auteur'
-    text: '<p>Le logo "Captain Coaster" appartient à Benjamin R., Captain Coaster a le droit exclusif de l''utiliser et de le modifier. Toute reproduction sans autorisation est interdite.</p>
-              <p>Chaque utilisateur peut télécharger des photos sur Captain Coaster avec son crédit. Si vous êtes propriétaire d''une photo que vous ne souhaitez pas partager sur Captain Coaster, veuillez <a href="{link_href}">nous contacter</a> et la photo sera supprimée dès que possible.</p>'
+    title: "Droits d'Auteur"
+    text:
+        '<p>Le logo "Captain Coaster" appartient à Benjamin R., Captain Coaster a le droit exclusif de l''utiliser et de le modifier. Toute reproduction sans autorisation est interdite.</p>
+        <p>Chaque utilisateur peut télécharger des photos sur Captain Coaster avec son crédit. Si vous êtes propriétaire d''une photo que vous ne souhaitez pas partager sur Captain Coaster, veuillez <a href="{link_href}">nous contacter</a> et la photo sera supprimée dès que possible.</p>'
 contact:
     title: 'Contactez-nous'
     text: '<b>Des questions ou des remarques ? <a href="{link_href}">Contactez-nous</a>, on mord pas !</b>'
