🚀 Feature: Sort Reviews lists by date & value (#273)
* [#245] - Fix translations

* [#245] - Merge filters translations

* [#245] - Sort Reviews lists by date & value

* [#245] - Fix loaders translations

* [#245] - Fix sectionheader class

* little fixes

* fix translation files

---------

Co-authored-by: Florian Blond <florian.blond@gmail.com>

--- a/translations/ai_summary+intl-icu.de.yml
+++ b/translations/ai_summary+intl-icu.de.yml
@@ -12,6 +12,7 @@ ai_summary:
     info:
         based_on: 'KI-generierte Zusammenfassung basierend auf {count, plural, =1 {1 Bewertung} other {# Bewertungen}}'
     panel:
-        title: "Captain's Review"
+        title: 'Captain Bewertung'
+        loading: 'Laden von KI-Zusammenfassung...'
         highlights: 'Highlights'
         concerns: 'Bedenken'
