--- a/translations/messages+intl-icu.es.yml
+++ b/translations/messages+intl-icu.es.yml
@@ -96,6 +96,7 @@ coaster:
         empty: '¡Aún no tenemos fotos de este posavasos, pero puedes enviarnos las tuyas!'
         button: Subir una foto
         all: Ver todas las fotos
+        loading: Carga de fotos
     location: Localización
 
 image_upload:
@@ -137,31 +138,39 @@ coaster_ranking:
             short: pares
             long: pares analizados
         users: votantes
-    filter:
-        continent: 'Mundo'
-        country: 'País'
-        materialType: 'Tipo'
-        seatingType: 'Tren'
-        model: 'Modelo'
-        manufacturer: Fabricante
-        openingDate: Fecha de apertura
 
 map_index:
-    title: Mapa de montañas rusas
+    title: 'Mapa de montañas rusas'
     description: 'Descubre dónde están las montañas rusas más increíbles de los alrededores, los éxitos del próximo año o el B&M que aún no has montado con este mapa interactivo.'
-    filter:
-        title: Filtros
-        manufacturer: Fabricante
-        status: Operando
-        kiddie: Ocultar Montañas rusas infantil
-        notridden: No montado todavía
-        new: Nuevo este mos
-        score: Resultado
-        atleast: 'al menos {count}'
-        openingDate: Fecha de apertura
-        name: 'Nombre'
-        clear: 'Borrar filtros'
     results: Resultados
+
+filters:
+    title: Filtros
+    continent: Mundo
+    country: País
+    materialType: Tipo
+    seatingType: Tren
+    model: Modelo
+    manufacturer: Fabricante
+    status: Operando
+    kiddie: Ocultar Montañas rusas infantil
+    notridden: No montado todavía
+    new: Nuevo este mos
+    score: Resultado
+    atleast: 'al menos {count}'
+    openingDate: Fecha de apertura
+    name: Nombre
+    clear: Borrar filtros
+
+    sorts:
+        default: Ordenar por defecto
+        reviews:
+            updatedAt:
+                asc: De la más antigua a la más reciente
+                desc: De la más reciente a la más antigua
+            value:
+                asc: De la nota más alta a la más baja
+                desc: De la nota más baja a la más alta
 
 user_profile:
     title: 'Perfil • {name}'
@@ -268,6 +277,7 @@ review:
     delete: Borrar
     last: Últimas reseñas
     all: Ver todo
+    loading: Carga de reseñas
     ridden_at: Fecha del ride
     upvote: Votar por esta reseña
     report: Reportar esta reseña
