--- a/translations/messages+intl-icu.en.yml
+++ b/translations/messages+intl-icu.en.yml
@@ -41,16 +41,6 @@ coaster:
         quality: 'Quality Score'
         worldrank: 'World Rank'
         overview: 'At a Glance'
-    quality:
-        excellent: 'Excellent'
-        good: 'Good'
-        fair: 'Fair'
-        poor: 'Poor'
-    ai_summary:
-        title: 'Review Summary'
-        highlights: 'What riders love'
-        concerns: 'Common concerns'
-        disclaimer: 'AI-generated summary based on {count} reviews'
     rating:
         action: 'Rate this coaster!'
         my_rating: 'My rating'
@@ -101,6 +91,7 @@ coaster:
         empty: "Oops, we don't have any photos yet for this coaster, but you can send yours!"
         button: 'Upload a picture'
         all: 'See all pictures'
+        loading: 'Loading photos...'
     location: 'Location'
 
 image_upload:
@@ -142,31 +133,39 @@ coaster_ranking:
             short: 'pairs'
             long: 'analyzed pairs'
         users: 'voters'
-    filter:
-        continent: 'World'
-        country: 'Country'
-        materialType: 'Type'
-        seatingType: 'Train'
-        model: 'Model'
-        manufacturer: 'Manufacturer'
-        openingDate: 'Opening Date'
 
 map_index:
     title: 'Coasters Map'
     description: 'Discover where are the most amazing roller coasters nearby, the next year hits or the B&M you have not ridden yet with this interactive map.'
-    filter:
-        title: 'Filters'
-        manufacturer: 'Manufacturer'
-        status: 'Operating'
-        kiddie: 'Hide kiddies'
-        notridden: 'Not ridden yet'
-        new: 'New this month'
-        score: 'Score'
-        atleast: 'at least {count}'
-        openingDate: 'Opening date'
-        name: 'Name'
-        clear: 'Clear filters'
     results: 'Results'
+
+filters:
+    title: 'Filters'
+    continent: 'World'
+    country: 'Country'
+    materialType: 'Type'
+    seatingType: 'Train'
+    model: 'Model'
+    manufacturer: 'Manufacturer'
+    status: 'Operating'
+    kiddie: 'Hide kiddies'
+    notridden: 'Not ridden yet'
+    new: 'New this month'
+    score: 'Score'
+    atleast: 'at least {count}'
+    openingDate: 'Opening date'
+    name: 'Name'
+    clear: 'Clear filters'
+
+    sorts:
+        default: 'Default sort'
+        reviews:
+            updatedAt:
+                asc: 'Oldest to newest'
+                desc: 'Newest to oldest'
+            value:
+                asc: 'Lowest to higher rating'
+                desc: 'Higher to lowest rating'
 
 user_profile:
     title: 'Profile • {name}'
@@ -272,6 +271,7 @@ review:
     update: 'Edit'
     delete: 'Delete'
     last: 'Latest reviews'
+    loading: 'Loading reviews...'
     all: 'See all'
     ridden_at: 'Ride date'
     upvote: 'Upvote this review'
